--- a/homework-09/src/main/resources/templates/comment/comment-edit.html
+++ b/homework-09/src/main/resources/templates/comment/comment-edit.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/static/form-style.css" th:href="@{/form-style.css}">
 	</head>
 	<body>
-		<h3 th:text="'Comment Info for book ' + ${targetComment.bookName}">Comment Info</h3>
+		<h3>Comment Info:</h3>
 		<form class="edit-form" action="comment-list.html"
 		      th:object="${targetComment}"
 		      th:method="post" th:action="@{update(id=${targetComment.id})}">
@@ -26,12 +26,12 @@
 					        th:text="${book.name}"></option>
 				</select>
 				<span class="errors" th:if="${#fields.hasErrors('bookId')}" th:errors="*{bookId}">
-					genreId
+					Book is not selected
 				</span>
 			</div>
 			<div class="row">
 				<input type="submit" value="Submit">
-				<a href="comment-list.html" th:href="@{/book/{id}/comment(id=${bookId})}">
+				<a href="comment-list.html" th:href="@{/book/{id}/comment(id=*{bookId})}">
 					<button type="button">Cancel</button>
 				</a>
 			</div>
