--- a/homework-09/src/main/resources/templates/comment/comment-list.html
+++ b/homework-09/src/main/resources/templates/comment/comment-list.html
@@ -8,9 +8,11 @@
 	<body>
 		<h3>
 			<span th:text="'Comments for book ' + ${targetBook.name}">Comments</span>
-			<a class="action save" href="comment-add.html" th:href="@{comment/new}">&#43</a>
+			<a class="action save" href="comment-add.html"
+			   th:href="@{/book/{bookId}/comment/new(bookId=${targetBook.id})}">&#43</a>
 		</h3>
-		<table>
+		<p class="empty" th:if="${comments.isEmpty()}">There is no comments present. Create one</p>
+		<table th:if="${!comments.isEmpty()}">
 			<thead>
 				<tr>
 					<th>№</th>
@@ -25,11 +27,15 @@
 					<td th:text="*{text}">Comment text</td>
 					<td>
 						<a class="action save" href="comment-edit.html"
-						   th:href="@{comment/update(id=*{id})}">&#9998</a>
+						   th:href="@{/book/{bookId}/comment/update/{id}(bookId=*{bookId},id=*{id})}">
+							&#9998;
+						</a>
 					</td>
 					<td>
-						<a class="action delete" href="#"
-						   th:href="@{comment/delete(id=*{id})}">&#10005</a>
+						<form action="#" method="post" th:method="post"
+						      th:action="@{/book/{bookId}/comment/delete/{id}(bookId=*{bookId},id=*{id})}">
+							<input class="action delete" type="submit" name="id" value="&#10005;">
+						</form>
 					</td>
 				</tr>
 			</tbody>
