--- a/homework-09/src/main/resources/templates/author/author-add.html
+++ b/homework-09/src/main/resources/templates/author/author-add.html
@@ -3,19 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>New author page</title>
-		<link rel="stylesheet" href="/static/form-style.css" th:href="@{/form-style.css}">
+		<link rel="stylesheet" href="/form-style.css" th:href="@{/form-style.css}">
 	</head>
 	<body>
 		<h3>New author:</h3>
-		<form class="edit-form" action="/author/new"
-		      th:object="${targetAuthor}" th:method="post"
-		      th:action="@{/author/new}">
+		<form class="edit-form" method="post" action="/author/new"
+		      th:method="post" th:object="${targetAuthor}" th:action="@{/author/new}">
 			<div class="row">
 				<label for="name-input">Name:</label>
 				<input id="name-input" type="text" th:field="*{name}"/>
-				<div class="errors" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+				<span class="errors" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
 					Wrong author name
-				</div>
+				</span>
 			</div>
 			<div class="row">
 				<input type="submit" value="Submit">
