--- a/homework-09/src/main/resources/templates/author/author-edit.html
+++ b/homework-09/src/main/resources/templates/author/author-edit.html
@@ -3,19 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Author edit page</title>
-		<link rel="stylesheet" href="/static/form-style.css" th:href="@{/form-style.css}">
+		<link rel="stylesheet" href="/form-style.css" th:href="@{/form-style.css}">
 	</head>
 	<body>
 		<h3>Author Info:</h3>
 		<form class="edit-form" method="post" action="/author/update"
-		      th:method="post" th:object="${targetAuthor}"
-		      th:action="@{/author/update(id=${targetAuthor.id})}">
+		      th:method="post" th:object="${targetAuthor}" th:action="@{/author/update/{id}(id=*{id})}">
 			<div class="row">
 				<label for="name-input">Name:</label>
 				<input id="name-input" type="text" th:field="*{name}" th:value="*{name}"/>
-				<div class="errors" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+				<span class="errors" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
 					Wrong author name
-				</div>
+				</span>
 			</div>
 			<div class="row">
 				<input type="submit" value="Submit">
