--- a/homework-09/src/main/resources/templates/book/book-edit.html
+++ b/homework-09/src/main/resources/templates/book/book-edit.html
@@ -3,20 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Book edit page</title>
-		<link rel="stylesheet" href="/static/form-style.css" th:href="@{/form-style.css}">
+		<link rel="stylesheet" href="/form-style.css" th:href="@{/form-style.css}">
 	</head>
 	<body>
 		<h3>Book Info:</h3>
 		<form class="edit-form" method="post" action="/book/update"
-		      th:object="${targetBook}" th:method="post"
-		      th:action="@{/book/update(id=${targetBook.id})}">
+		      th:method="post" th:object="${targetBook}" th:action="@{/book/update/{id}(id=*{id})}">
 			<div class="row">
 				<label for="name-input">Name:</label>
 				<input id="name-input" type="text" th:field="*{name}" th:value="*{name}"/>
-				<div class="errors" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
-					<span th:each="error : ${#fields.allDetailedErrors()}"
-					      th:value="${error.getMessage()}"></span>
-				</div>
+				<span class="errors" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+					Wrong book name
+				</span>
 			</div>
 			<div class="row">
 				<label for="author-select">Choose author:</label>
