--- a/homework-09/src/main/resources/templates/comment/comment-edit.html
+++ b/homework-09/src/main/resources/templates/comment/comment-edit.html
@@ -3,19 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Comment edit page</title>
-		<link rel="stylesheet" href="/static/form-style.css" th:href="@{/form-style.css}">
+		<link rel="stylesheet" href="/form-style.css" th:href="@{/form-style.css}">
 	</head>
 	<body>
 		<h3>Comment Info:</h3>
-		<form class="edit-form" action="comment-list.html"
-		      th:object="${targetComment}"
-		      th:method="post" th:action="@{update(id=${targetComment.id})}">
+		<form class="edit-form" method="post" action="comment-list.html"
+		      th:method="post" th:object="${targetComment}"
+		      th:action="@{/book/{bookId}/comment/update/{id}(bookId=*{bookId},id=*{id})}">
 			<div class="row">
 				<label for="name-input">Text:</label>
 				<input id="name-input" type="text" th:field="*{text}" th:value="*{text}"/>
-				<div class="errors" th:if="${#fields.hasErrors('text')}" th:errors="*{text}">
+				<span class="errors" th:if="${#fields.hasErrors('text')}" th:errors="*{text}">
 					Wrong comment text
-				</div>
+				</span>
 			</div>
 			<div class="row">
 				<label for="book-select">Choose book:</label>
@@ -31,7 +31,7 @@
 			</div>
 			<div class="row">
 				<input type="submit" value="Submit">
-				<a href="comment-list.html" th:href="@{/book/{id}/comment(id=*{bookId})}">
+				<a href="comment-list.html" th:href="@{/book/{bookId}/comment(bookId=*{bookId})}">
 					<button type="button">Cancel</button>
 				</a>
 			</div>
