--- a/homework-09/src/main/resources/templates/genre/genre-edit.html
+++ b/homework-09/src/main/resources/templates/genre/genre-edit.html
@@ -3,13 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Genre edit page</title>
-		<link rel="stylesheet" href="/static/form-style.css" th:href="@{/form-style.css}">
+		<link rel="stylesheet" href="/form-style.css" th:href="@{/form-style.css}">
 	</head>
 	<body>
 		<h3>Genre Info:</h3>
 		<form class="edit-form" method="post" action="/genre/update"
-		      th:method="post" th:object="${targetGenre}"
-		      th:action="@{/genre/update(id=${targetGenre.id})}">
+		      th:method="post" th:object="${targetGenre}" th:action="@{/genre/update/{id}(id=*{id})}">
 			<div class="row">
 				<label for="name-input">Name:</label>
 				<input id="name-input" type="text" th:field="*{name}" th:value="*{name}"/>
