--- a/homework-12/src/main/resources/templates/comment/comment-add.html
+++ b/homework-12/src/main/resources/templates/comment/comment-add.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>New comment page</title>
-		<link rel="stylesheet" href="/form-style.css" th:href="@{/form-style.css}">
+		<link rel="stylesheet" href="/css/form-style.css" th:href="@{/css/form-style.css}">
 	</head>
 	<body>
 		<h3>New comment</h3>
