--- a/homework-12/src/main/resources/templates/author/author-edit.html
+++ b/homework-12/src/main/resources/templates/author/author-edit.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Author edit page</title>
-		<link rel="stylesheet" href="/form-style.css" th:href="@{/form-style.css}">
+		<link rel="stylesheet" href="/css/form-style.css" th:href="@{/css/form-style.css}">
 	</head>
 	<body>
 		<h3>Author Info:</h3>
 		<form class="edit-form" method="post" action="/author/update"
-		      th:method="post" th:object="${targetAuthor}" th:action="@{/author/update/{id}(id=*{id})}">
+		      th:method="post" th:if="${targetAuthor} != null" th:object="${targetAuthor}"
+		      th:action="@{/author/update/{id}(id=*{id})}">
 			<div class="row">
 				<label for="name-input">Name:</label>
 				<input id="name-input" type="text" th:field="*{name}" th:value="*{name}"/>
