--- a/homework-12/src/main/resources/templates/comment/comment-list.html
+++ b/homework-12/src/main/resources/templates/comment/comment-list.html
@@ -3,48 +3,52 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>List of comments</title>
-		<link rel="stylesheet" href="/list-style.css" th:href="@{/list-style.css}">
+		<link rel="stylesheet" href="/css/list-style.css" th:href="@{/css/list-style.css}">
 	</head>
 	<body>
-		<div class="heading">
-			<h1>
-				<span th:text="'Comments for book ' + ${targetBook.name}">Comments</span>
+		<header class="heading">
+			<h1 th:if="${targetBook} != null">
+				<span th:text="'Comments'">Comments</span>
+				<span th:text="' for book ' + ${targetBook.name}"></span>
 				<a class="action save" href="comment-add.html"
 				   th:href="@{/book/{bookId}/comment/new(bookId=${targetBook.id})}">&#43</a>
 			</h1>
 			<form th:action="@{/logout}" method="post" class="logout-form">
 				<input type="submit" value="Log out" class="logout-btn"/>
-				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			</form>
-		</div>
-		<p class="empty" th:if="${comments.isEmpty()}">There is no comments present. Create one</p>
-		<table th:if="${!comments.isEmpty()}">
-			<thead>
-				<tr>
-					<th>№</th>
-					<th>Text</th>
-					<th>Update</th>
-					<th>Delete</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="comment, commentStat : ${comments}" th:object="${comment}">
-					<td th:text="${commentStat.count}">0</td>
-					<td th:text="*{text}">Comment text</td>
-					<td>
-						<a class="action save" href="comment-edit.html"
-						   th:href="@{/book/{bookId}/comment/update/{id}(bookId=*{bookId},id=*{id})}">
-							&#9998;
-						</a>
-					</td>
-					<td>
-						<form action="#" method="post" th:method="post"
-						      th:action="@{/book/{bookId}/comment/delete/{id}(bookId=*{bookId},id=*{id})}">
-							<input class="action delete" type="submit" name="id" value="&#10005;">
-						</form>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+		</header>
+		<main th:if="${comments != null}">
+			<p class="empty" th:if="${comments.isEmpty()}">There is no comments present. Create one</p>
+			<table th:if="${!comments.isEmpty()}">
+				<thead>
+					<tr>
+						<th>№</th>
+						<th>Text</th>
+						<th>Update</th>
+						<th>Delete</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="comment, commentStat : ${comments}"
+					    th:object="${comment}">
+						<td th:text="${commentStat.count}">0</td>
+						<td th:text="*{text}">Comment text</td>
+						<td>
+							<a class="action save" href="comment-edit.html"
+							   th:href="@{/book/{bookId}/comment/update/{id}(bookId=*{bookId},id=*{id})}">
+								&#9998;
+							</a>
+						</td>
+						<td>
+							<form action="#" method="post" th:method="post"
+							      th:action="@{/book/{bookId}/comment/delete/{id}(bookId=*{bookId},id=*{id})}">
+								<input class="action delete" type="submit" name="id"
+								       value="&#10005;">
+							</form>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</main>
 	</body>
 </html>
