--- a/homework-12/src/main/resources/templates/genre/genre-list.html
+++ b/homework-12/src/main/resources/templates/genre/genre-list.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>List of all genres</title>
-		<link rel="stylesheet" href="/list-style.css" th:href="@{/list-style.css}">
+		<link rel="stylesheet" href="/css/list-style.css" th:href="@{/css/list-style.css}">
 	</head>
 	<body>
 		<div class="heading">
@@ -13,7 +13,6 @@
 			</h1>
 			<form th:action="@{/logout}" method="post" class="logout-form">
 				<input type="submit" value="Log out" class="logout-btn"/>
-				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			</form>
 		</div>
 		<p class="empty" th:if="${genres.isEmpty()}">There is no genres present. Create one</p>
